@@ -68,14 +68,14 @@ final public class Tournaments {
       numRows++;
     }
     
-    out.println("<form action='tournaments.jsp' method='GET' name='tournaments'>");
+    out.println("<form action='tournaments.jsp' method='POST' name='tournaments'>");
 
-    if(null != request.getParameter("commit")) {
+    if(null != request.getParameter("commit") && verifyData(out, request)) {
       commitData(request, response, connection, application);
     } else {
-      out.println("<p><b>Tournament name's must be unique, otherwise the last one in the table will overwrite any others above it with the same name.</b></p>");
+      out.println("<p><b>Tournament name's must be unique and next tournament must refer to the name of another tournament listed.  Tournaments can be removed by erasing the name and location.</b></p>");
       
-      out.println("<table border='1'><tr><th>Name</th><th>Location</th></tr>");
+      out.println("<table border='1'><tr><th>Name</th><th>Location</th><th>Next Tournament</th></tr>");
 
       int row = 0; //keep track of which row we're generating
       
@@ -86,15 +86,12 @@ final public class Tournaments {
         Statement stmt = null;
         try {
           stmt = connection.createStatement();
-          rs = stmt.executeQuery("SELECT Name, Location FROM Tournaments");
+          rs = stmt.executeQuery("SELECT Name, Location, NextTournament FROM Tournaments ORDER BY Name");
           for(row=0; rs.next(); row++) {
             final String name = rs.getString(1);
             final String location = rs.getString(2);
-            if(!"DUMMY".equals(name)) {
-              generateRow(out, row, name, location);
-            } else {
-              row--;
-            }
+            final String next = rs.getString(3);
+            generateRow(out, row, name, location, next);
           }
         } finally {
           Utilities.closeResultSet(rs);
@@ -104,12 +101,14 @@ final public class Tournaments {
         //need to walk the parameters to see what we've been passed
         String name = request.getParameter("name" + row);
         String location = request.getParameter("location" + row);
+        String next = request.getParameter("next" + row); 
         while(null != name) {
-          generateRow(out, row, name, location);
+          generateRow(out, row, name, location, next);
           
           row++;
           name = request.getParameter("name" + row);
           location = request.getParameter("location" + row);
+          next = request.getParameter("next" + row);
         }
       }
 
@@ -117,7 +116,7 @@ final public class Tournaments {
       final int tableRows = Math.max(numRows, row);
       
       for(; row < tableRows; row++) {
-        generateRow(out, row, null, null);
+        generateRow(out, row, null, null, null);
       }
 
       out.println("</table>");
@@ -137,12 +136,14 @@ final public class Tournaments {
    * @param out where to print
    * @param row the row being generated, used for naming form elements
    * @param name name of tournament, can be null
-   * @param location location of region, can be null
+   * @param location location of tournament, can be null
+   * @param next next tournament after this one, can be null
    */
   private static void generateRow(final JspWriter out,
                                   final int row,
                                   final String name,
-                                  final String location) throws IOException {
+                                  final String location,
+                                  final String next) throws IOException {
     out.println("<tr>");
 
     out.print("  <input type='hidden' name='key" + row + "'");
@@ -157,17 +158,70 @@ final public class Tournaments {
     if(null != name) {
       out.print(" value='" + name + "'");
     }
+    if("DUMMY".equals(name) || "DROP".equals(name)) {
+      out.print(" readonly");
+    }
     out.println(" maxlength='16' size='16'></td>");
 
     out.print("  <td><input type='text' name='location" + row + "'");
     if(null != location) {
       out.print(" value='" + location + "'");
     }
-    out.println(" size='32'></td>");
+    if("DUMMY".equals(name) || "DROP".equals(name)) {
+      out.print(" readonly");
+    }
+    out.println(" size='64'></td>");
 
+    out.print("  <td><input type='text' name='next" + row + "'");
+    if(null != next) {
+      out.print(" value='" + next + "'");
+    }
+    if("DUMMY".equals(name) || "DROP".equals(name)) {
+      out.print(" readonly");
+    }
+    out.println(" size='16'></td>");
+    
     out.println("</tr>");
   }
 
+  /**
+   * Verify that the data in the request is valid.  Checks for things like
+   * multiple tournaments with the same name and the next tournament parameter
+   * pointing to a non-existant tournament.
+   *
+   * @return true if everything is ok, false otherwise and write message to
+   * out
+   */
+  private static boolean verifyData(final JspWriter out,
+                                    final HttpServletRequest request)
+    throws IOException {
+    final Map tournamentNames = CollectionUtils.createHashMap(20);
+    boolean retval = true;
+    int row = 0;
+    String name = request.getParameter("name" + row);
+    while(null != name) {
+      if(tournamentNames.containsKey(name)) {
+        out.println("<p><font color='red'>Row " + (row+1) + " contains duplicate name " + name + "</font></p>");
+        retval = false;
+      } else {
+        tournamentNames.put(name, name);
+      }
+
+      row++;
+      name = request.getParameter("name" + row);
+    }
+
+    for(int i=0; i<row; i++) {
+      final String next = request.getParameter("next" + i);
+      if(null != next && !"".equals(next) && !tournamentNames.containsKey(next)) {
+        out.println("<p><font color='red'>Unknown tournament referenced as the next tournament for " + request.getParameter("name" + i) + ", row " + (i+1) + "</font></p>");
+        retval = false;
+      }
+    }
+    
+    return retval;
+  }
+  
   /**
    * Commit the subjective data from request to the database and redirect
    * response back to index.jsp.
@@ -182,19 +236,21 @@ final public class Tournaments {
     PreparedStatement deletePrep = null;
     try {
       //walk request parameters and insert data into database
-      insertPrep = connection.prepareStatement("INSERT INTO Tournaments (Name, Location) VALUES(?, ?)");
-      updatePrep = connection.prepareStatement("UPDATE Tournaments SET Name = ?, Location = ? WHERE Name = ?");
+      insertPrep = connection.prepareStatement("INSERT INTO Tournaments (Name, Location, NextTournament) VALUES(?, ?)");
+      updatePrep = connection.prepareStatement("UPDATE Tournaments SET Name = ?, Location = ?, NextTournament = ? WHERE Name = ?");
       deletePrep = connection.prepareStatement("DELETE FROM Tournaments WHERE Name = ?");
         
       int row = 0;
       String key = request.getParameter("key" + row);
       String name = request.getParameter("name" + row);
       String location = request.getParameter("location" + row);
+      String next = request.getParameter("next" + row);
       while(null != name) {
         if("new".equals(key) && !"".equals(name)) {
           //new tournament
           insertPrep.setString(1, name);
           insertPrep.setString(2, name);
+          insertPrep.setString(3, next);
           insertPrep.executeUpdate();
         } else {
           if("".equals(name)) {
@@ -205,7 +261,8 @@ final public class Tournaments {
             //update with new values
             updatePrep.setString(1, name);
             updatePrep.setString(2, location);
-            updatePrep.setString(3, name);
+            updatePrep.setString(3, next);
+            updatePrep.setString(4, name);
             updatePrep.executeUpdate();
           }
         }
@@ -213,6 +270,7 @@ final public class Tournaments {
         key = request.getParameter("key" + row);
         name = request.getParameter("name" + row);
         location = request.getParameter("location" + row);
+        next = request.getParameter("next" + row);
       }
       
     } finally {
@@ -225,7 +283,7 @@ final public class Tournaments {
     Queries.initializeTournamentTeams(connection);
     Queries.populateTournamentTeams(application);
     
-    //finally redirect to index.jsp 
+    //finally redirect to index.jsp
     response.sendRedirect(response.encodeRedirectURL("index.jsp"));
   }
 }
